Added a base class ToolBehaviorConfig, renamed hover to symbol_info
The latter because we likely will eventually start using the same field for JB tools

--- a/src/serena/resources/project.template.yml
+++ b/src/serena/resources/project.template.yml
@@ -111,6 +111,6 @@ default_modes:
 # (contrary to the memories, which are loaded on demand).
 initial_prompt: ""
 
-# Override of the correspounding setting in serena_config.yml, see the documentation there.
+# Override of the corresponding setting in serena_config.yml, see the documentation there.
 # If null or missing, the value from the global config is used.
-hover_budget: null
+symbol_info_budget: null
