--- a/src/serena/resources/project.template.yml
+++ b/src/serena/resources/project.template.yml
@@ -111,6 +111,6 @@ default_modes:
 # (contrary to the memories, which are loaded on demand).
 initial_prompt: ""
 
-# Override of the corresponding setting in serena_config.yml, see the documentation there.
+# override of the corresponding setting in serena_config.yml, see the documentation there.
 # If null or missing, the value from the global config is used.
-symbol_info_budget: null
+symbol_info_budget:
