--- a/src/serena/resources/serena_config.template.yml
+++ b/src/serena/resources/serena_config.template.yml
@@ -108,7 +108,7 @@ default_max_tool_answer_chars: 150000
 # estimate the token count using the Claude Sonnet 4 tokenizer.
 token_count_estimator: CHAR_COUNT
 
-# Time budget (seconds) for requests when tools request symbol info (currently
+# time budget (seconds) for requests when tools request symbol info (currently
 # only supported for LSP-based tools).
 # If the budget is exceeded, Serena stops issuing further symbol-info-related
 # requests and returns partial info results.
